--- a/app/index.html
+++ b/app/index.html
@@ -40,7 +40,7 @@
           <div class="top_line_logo">
             <img src="images/logo_navbar.png" alt="логотип">
           </div>
-          <div class="top_line_menu">
+          <div class="top_line_menu hidden-xs">
             <ul>
               <li><a href="#Features">Предложения</a></li>
               <li><a href="#prinsiple">Принципы</a></li>
@@ -49,9 +49,25 @@
               <li><a href="#contact">Контакты</a></li>
             </ul>
           </div>
+          <div class="mobile_block_menu">
+        <a href="#" class="toggle-mnu"><span></span></a>
+          </div>
         </div>
+
+
+
       </div>
+
     </div>
+       <nav class="top_line_menu hidden-mnu ">
+                <ul>
+            <li><a href="#Features">Предложения</a></li>
+              <li><a href="#prinsiple">Принципы</a></li>
+              <li><a href="#price">Цены</a></li>
+              <li><a href="#adwise">Отзывы</a></li>
+              <li><a href="#contact">Контакты</a></li>
+                  </ul>
+                  </nav>
   </div>
 
   <div class="top_content clearfix">
@@ -63,9 +79,11 @@
           <h3>Современный адаптивный НТМL5-шаблон поможет быстро легкий сайт для предоставления информации
             о вами продаваемых товарах, предоставляемых услугах уже сейчас и с минимальными усилиями.
            </h3>
+<div class="buton_box">
           <a href="#call-back" class="top_button" data-form="кнопка в хедере на картинке" data-text="Получить сейчас">
             Скачать
           </a>
+</div>
         </div>
         <div class="top_content_right">
           <!-- форма обратной связи  -->
@@ -116,9 +134,9 @@
 <!--  начало табов  -->
     <div class="jq-tab-wrapper jq-tab-custom" id="verticalTab">
         <div class="jq-tab-menu">
-            <div class="jq-tab-title active" data-tab="1">первое предложение</div>
-            <div class="jq-tab-title" data-tab="2">второе предложение</div>
-            <div class="jq-tab-title" data-tab="3">третье предложение</div>
+            <div class="jq-tab-title active" data-tab="1"><span> первое предложение</span></div>
+            <div class="jq-tab-title" data-tab="2"><span>второе предложение</span></div>
+            <div class="jq-tab-title" data-tab="3"><span>третье предложение</span></div>
         </div>
         <div class="jq-tab-content-wrapper">
 
@@ -175,6 +193,7 @@
                 <p>
                   Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты. Имени щеке алфавит, ему раз, строчка меня!
                 </p>
+
                  <a href="#call-back" class="content_tabs_button">Скачать</a>
               </div>
               <div class="content_tabs_right">
@@ -195,10 +214,10 @@
 <section class="block">
   <div class="container">
     <div class="row">
-      <div class="col-lg-6">
+      <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
         <img src="images/image_left_sub_list_u260.png" class="img-responsive" alt="rfhnbyrf">
       </div>
-      <div class="col-lg-6">
+      <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
        <div class="sub_list_sec">
          <div class="sub_list_sec"><h2>Мы всегда рядом</h2></div>
          <div class="sub_list_descr">        Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты. О, он.  Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты. Имени щеке алфавит
@@ -235,7 +254,7 @@
   <div class="container">
     <div class="row">
 
-      <div class="col-lg-6">
+      <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
        <div class="sub_list_sec">
          <div class="sub_list_sec"><h2>Мы Всегда Активны</h2></div>
          <div class="sub_list_descr">
@@ -247,7 +266,7 @@
         </div>
       </div>
     </div>
-    <div class="col-lg-6">
+    <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
       <img src="images/image_right_standard_u262.png" class="img-responsive" alt="rfhnbyrf">
     </div>
   </div>
